sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: illegal start of simple pattern
  var = 0
      ^AlgBubbleSort1:4: error: '=' expected but ';' found.
  for (i<- 0 to getNombreValeurs()){
^AlgBubbleSort1:8: error: illegal start of simple expression
      echange(var, i)
              ^AlgBubbleSort1:12: error: ')' expected but '}' found.
    }
    ^