sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var = 0
  for (i<- 0 to getNombreValeurs()){
    
    j=i
    while (j<i){
      echange(var, i)
      echange(i, i+1)
      echange()
      j=j+1
    }
  }
}